# min_snap

./: CMakeLists.txt  ex1.cpp  example.cpp  goals.yaml  main.cpp  minsnap.cpp  multi_quad_traj.cpp  qptest  solver.cpp  solver.h  t1.cpp  te.cpp  test.cpp  thtest.cpp  yaml-test.cpp  yaml.h  yaml_test.h
